Replace arraylist with map for players